@@ -63,6 +63,7 @@ Julien Bordet <julien.bordet@int-evry.fr>
 Julien Perrot <julien.perrot@iie.cnam.fr>
 Kalle Olavi Niemitalo <tosi@ees2.oulu.fi>
 Karsten Scheibler <karsten.scheibler@student.uni-halle.de>
+KB Sriram <mail_kb@yahoo.com>
 Khimenko Victor <grub@khim.sch57.msk.ru>
 Klaus Reichl <klaus.reichl@alcatel.at>
 Kristoffer Branemyr <ztion@swipnet.se>
@@ -87,6 +88,7 @@ Per Lundberg <plundis@byggdok.se>
 Peter Astrand <altic@lysator.liu.se>
 Ralf Medow <ralf.medow@t-online.de>
 Ramon van Handel <vhandel@chem.vu.nl>
+Robert Millan  <robertmh@gnu.org>
 Roderich Schupp <rsch@ExperTeam.de>
 Rogelio M. Serrano Jr. <rogelio@victorio.com>
 Serguei Tzukanov <tzukanov@narod.ru>
